--- a/Recurrent Neural Network/Building_a_Recurrent_Neural_Network_Step_by_Step.ipynb
+++ b/Recurrent Neural Network/Building_a_Recurrent_Neural_Network_Step_by_Step.ipynb
@@ -1483,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1523,18 +1523,19 @@
     "\n",
     "    ### START CODE HERE ###\n",
     "    # compute the gradient of dtanh term using a_next and da_next (≈1 line)\n",
-    "    dtanh = None\n",
+    "    dtanh = da_next * (\n",
+    "        1 - np.square(np.tanh(np.dot(Wax, xt) + np.dot(Waa, a_prev) + ba)))\n",
     "\n",
     "    # compute the gradient of the loss with respect to Wax (≈2 lines)\n",
-    "    dxt = None\n",
-    "    dWax = None\n",
+    "    dxt = np.dot(np.transpose(Wax), dtanh)\n",
+    "    dWax = np.dot(dtanh, np.transpose(xt))\n",
     "\n",
     "    # compute the gradient with respect to Waa (≈2 lines)\n",
-    "    da_prev = None\n",
-    "    dWaa = None\n",
+    "    da_prev = np.dot(np.transpose(Waa), dtanh)\n",
+    "    dWaa = np.dot(dtanh, np.transpose(a_prev))\n",
     "\n",
     "    # compute the gradient with respect to b (≈1 line)\n",
-    "    dba = None\n",
+    "    dba = np.sum(dtanh, axis=1, keepdims=True)\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "\n",
@@ -1552,14 +1553,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "VVbG5aPtELGd",
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gradients[\"dxt\"][1][2] = -1.3872130506020928\n",
+      "gradients[\"dxt\"].shape = (3, 10)\n",
+      "gradients[\"da_prev\"][2][3] = -0.15239949377395418\n",
+      "gradients[\"da_prev\"].shape = (5, 10)\n",
+      "gradients[\"dWax\"][3][1] = 0.41077282493545836\n",
+      "gradients[\"dWax\"].shape = (5, 3)\n",
+      "gradients[\"dWaa\"][1][2] = 1.1503450668497133\n",
+      "gradients[\"dWaa\"].shape = (5, 5)\n",
+      "gradients[\"dba\"][4] = [0.20023491]\n",
+      "gradients[\"dba\"].shape = (5, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(1)\n",
     "xt_tmp = np.random.randn(3, 10)\n",
@@ -1715,7 +1733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1754,28 +1772,28 @@
     "    n_x, m = x1.shape\n",
     "\n",
     "    # initialize the gradients with the right sizes (≈6 lines)\n",
-    "    dx = None\n",
-    "    dWax = None\n",
-    "    dWaa = None\n",
-    "    dba = None\n",
-    "    da0 = None\n",
-    "    da_prevt = None\n",
+    "    dx = np.zeros((n_x, m, T_x))\n",
+    "    dWax = np.zeros((n_a, n_x))\n",
+    "    dWaa = np.zeros((n_a, n_a))\n",
+    "    dba = np.zeros((n_a, 1))\n",
+    "    da0 = np.zeros((n_a, m))\n",
+    "    da_prevt = np.zeros_like(da0)\n",
     "\n",
     "    # Loop through all the time steps\n",
     "    for t in reversed(range(T_x)):\n",
     "        # Compute gradients at time step t. Choose wisely the \"da_next\" and the \"cache\" to use in the backward propagation step. (≈1 line)\n",
-    "        gradients = None\n",
+    "        gradients = rnn_cell_backward(da[:, :, t], caches[t])\n",
     "        # Retrieve derivatives from gradients (≈ 1 line)\n",
     "        dxt, da_prevt, dWaxt, dWaat, dbat = gradients[\"dxt\"], gradients[\n",
     "            \"da_prev\"], gradients[\"dWax\"], gradients[\"dWaa\"], gradients[\"dba\"]\n",
     "        # Increment global derivatives w.r.t parameters by adding their derivative at time-step t (≈4 lines)\n",
-    "        dx[:, :, t] = None\n",
-    "        dWax += None\n",
-    "        dWaa += None\n",
-    "        dba += None\n",
+    "        dx[:, :, t] = dxt\n",
+    "        dWax += dWaxt\n",
+    "        dWaa += dWaat\n",
+    "        dba += dbat\n",
     "\n",
     "    # Set da0 to the gradient of a which has been backpropagated through all time-steps (≈1 line)\n",
-    "    da0 = None\n",
+    "    da0 = da_prevt\n",
     "    ### END CODE HERE ###\n",
     "\n",
     "    # Store the gradients in a python dictionary\n",
@@ -1786,13 +1804,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "oZXl_w5pELGj"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gradients[\"dx\"][1][2] = [-0.15028183 -0.34554547  0.02071758  0.01483317]\n",
+      "gradients[\"dx\"].shape = (3, 10, 4)\n",
+      "gradients[\"da0\"][2][3] = -0.1726889318389081\n",
+      "gradients[\"da0\"].shape = (5, 10)\n",
+      "gradients[\"dWax\"][3][1] = 4.081485734449451\n",
+      "gradients[\"dWax\"].shape = (5, 3)\n",
+      "gradients[\"dWaa\"][1][2] = 1.056012342849445\n",
+      "gradients[\"dWaa\"].shape = (5, 5)\n",
+      "gradients[\"dba\"][4] = [-0.12427391]\n",
+      "gradients[\"dba\"].shape = (5, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(1)\n",
     "x_tmp = np.random.randn(3, 10, 4)\n",
@@ -1958,27 +1993,34 @@
     "\n",
     "#### 3. Parameter Derivatives \n",
     "\n",
-    "$ dW_f = d\\gamma_f^{\\langle t \\rangle} \\begin{bmatrix} a_{prev} \\\\ x_t\\end{bmatrix}^T \\tag{11} $\n",
-    "$ dW_u = d\\gamma_u^{\\langle t \\rangle} \\begin{bmatrix} a_{prev} \\\\ x_t\\end{bmatrix}^T \\tag{12} $\n",
-    "$ dW_c = dp\\widetilde c^{\\langle t \\rangle} \\begin{bmatrix} a_{prev} \\\\ x_t\\end{bmatrix}^T \\tag{13} $\n",
-    "$ dW_o = d\\gamma_o^{\\langle t \\rangle} \\begin{bmatrix} a_{prev} \\\\ x_t\\end{bmatrix}^T \\tag{14}$\n",
+    "$ dW_f = d\\gamma_f^{\\langle t \\rangle} \\begin{bmatrix} a_{prev} \\\\ x_t\\end{bmatrix}^T (11)$\n",
+    "\n",
+    "$ dW_u = d\\gamma_u^{\\langle t \\rangle} \\begin{bmatrix} a_{prev} \\\\ x_t\\end{bmatrix}^T (12)$\n",
+    "\n",
+    "$ dW_c = dp\\widetilde c^{\\langle t \\rangle} \\begin{bmatrix} a_{prev} \\\\ x_t\\end{bmatrix}^T (13)$\n",
+    "\n",
+    "$ dW_o = d\\gamma_o^{\\langle t \\rangle} \\begin{bmatrix} a_{prev} \\\\ x_t\\end{bmatrix}^T (14)$\n",
+    "\n",
     "\n",
     "To calculate $db_f, db_u, db_c, db_o$ you just need to sum across all 'm' examples (axis= 1) on $d\\gamma_f^{\\langle t \\rangle}, d\\gamma_u^{\\langle t \\rangle}, dp\\widetilde c^{\\langle t \\rangle}, d\\gamma_o^{\\langle t \\rangle}$ respectively. Note that you should have the `keepdims = True` option.\n",
     "\n",
-    "$\\displaystyle db_f = \\sum_{batch}d\\gamma_f^{\\langle t \\rangle}\\tag{15}$\n",
-    "$\\displaystyle db_u = \\sum_{batch}d\\gamma_u^{\\langle t \\rangle}\\tag{16}$\n",
-    "$\\displaystyle db_c = \\sum_{batch}d\\gamma_c^{\\langle t \\rangle}\\tag{17}$\n",
-    "$\\displaystyle db_o = \\sum_{batch}d\\gamma_o^{\\langle t \\rangle}\\tag{18}$\n",
+    "$\\displaystyle db_f = \\sum_{batch}d\\gamma_f^{\\langle t \\rangle} (15)$\n",
+    "\n",
+    "$\\displaystyle db_u = \\sum_{batch}d\\gamma_u^{\\langle t \\rangle} (16)$\n",
+    "\n",
+    "$\\displaystyle db_c = \\sum_{batch}d\\gamma_c^{\\langle t \\rangle} (17)$\n",
+    "\n",
+    "$\\displaystyle db_o = \\sum_{batch}d\\gamma_o^{\\langle t \\rangle} (18)$\n",
     "\n",
     "Finally, you will compute the derivative with respect to the previous hidden state, previous memory state, and input.\n",
     "\n",
-    "$ da_{prev} = W_f^T d\\gamma_f^{\\langle t \\rangle} + W_u^T   d\\gamma_u^{\\langle t \\rangle}+ W_c^T dp\\widetilde c^{\\langle t \\rangle} + W_o^T d\\gamma_o^{\\langle t \\rangle} \\tag{19}$\n",
+    "$ da_{prev} = W_f^T d\\gamma_f^{\\langle t \\rangle} + W_u^T   d\\gamma_u^{\\langle t \\rangle}+ W_c^T dp\\widetilde c^{\\langle t \\rangle} + W_o^T d\\gamma_o^{\\langle t \\rangle} (19)$\n",
     "\n",
     "Here, to account for concatenation, the weights for equations 19 are the first n_a, (i.e. $W_f = W_f[:,:n_a]$ etc...)\n",
     "\n",
-    "$ dc_{prev} = dc_{next}*\\Gamma_f^{\\langle t \\rangle} + \\Gamma_o^{\\langle t \\rangle} * (1- \\tanh^2(c_{next}))*\\Gamma_f^{\\langle t \\rangle}*da_{next} \\tag{20}$\n",
+    "$ dc_{prev} = dc_{next}*\\Gamma_f^{\\langle t \\rangle} + \\Gamma_o^{\\langle t \\rangle} * (1- \\tanh^2(c_{next}))*\\Gamma_f^{\\langle t \\rangle}*da_{next} (20)$\n",
     "\n",
-    "$ dx^{\\langle t \\rangle} = W_f^T d\\gamma_f^{\\langle t \\rangle} + W_u^T  d\\gamma_u^{\\langle t \\rangle}+ W_c^T dp\\widetilde c^{\\langle t \\rangle} + W_o^T d\\gamma_o^{\\langle t \\rangle}\\tag{21} $\n",
+    "$ dx^{\\langle t \\rangle} = W_f^T d\\gamma_f^{\\langle t \\rangle} + W_u^T  d\\gamma_u^{\\langle t \\rangle}+ W_c^T dp\\widetilde c^{\\langle t \\rangle} + W_o^T d\\gamma_o^{\\langle t \\rangle} (21)$\n",
     "\n",
     "where the weights for equation 21 are from n_a to the end, (i.e. $W_f = W_f[:,n_a:]$ etc...)\n",
     "\n",
@@ -2000,7 +2042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2040,29 +2082,41 @@
     "\n",
     "    ### START CODE HERE ###\n",
     "    # Retrieve dimensions from xt's and a_next's shape (≈2 lines)\n",
-    "    n_x, m = None\n",
-    "    n_a, m = None\n",
+    "    n_x, m = xt.shape\n",
+    "    n_a, m = a_next.shape\n",
     "\n",
     "    # Compute gates related derivatives. Their values can be found by looking carefully at equations (7) to (10) (≈4 lines)\n",
-    "    dot = None\n",
-    "    dcct = None\n",
-    "    dit = None\n",
-    "    dft = None\n",
+    "    dot = da_next * np.tanh(c_next) * ot * (1 - ot)\n",
+    "    dcct = (dc_next * it + ot *\n",
+    "            (1 - np.square(np.tanh(c_next))) * it * da_next) * (1 -\n",
+    "                                                                np.square(cct))\n",
+    "    dit = (dc_next * cct + ot *\n",
+    "           (1 - np.square(np.tanh(c_next))) * cct * da_next) * it * (1 - it)\n",
+    "    dft = (dc_next * c_prev + ot *\n",
+    "           (1 - np.square(np.tanh(c_next))) * c_prev * da_next) * ft * (1 - ft)\n",
     "\n",
     "    # Compute parameters related derivatives. Use equations (11)-(18) (≈8 lines)\n",
-    "    dWf = None\n",
-    "    dWi = None\n",
-    "    dWc = None\n",
-    "    dWo = None\n",
-    "    dbf = None\n",
-    "    dbi = None\n",
-    "    dbc = None\n",
-    "    dbo = None\n",
+    "    cat = np.transpose(np.concatenate([a_prev, xt]))\n",
+    "    dWf = np.dot(dft, cat)\n",
+    "    dWi = np.dot(dit, cat)\n",
+    "    dWc = np.dot(dcct, cat)\n",
+    "    dWo = np.dot(dot, cat)\n",
+    "    dbf = np.sum(dft, axis=1, keepdims=True)\n",
+    "    dbi = np.sum(dit, axis=1, keepdims=True)\n",
+    "    dbc = np.sum(dcct, axis=1, keepdims=True)\n",
+    "    dbo = np.sum(dot, axis=1, keepdims=True)\n",
     "\n",
     "    # Compute derivatives w.r.t previous hidden state, previous memory state and input. Use equations (19)-(21). (≈3 lines)\n",
-    "    da_prev = None\n",
-    "    dc_prev = None\n",
-    "    dxt = None\n",
+    "    da_prev = np.dot(np.transpose(parameters['Wf'][:, :n_a]), dft) + np.dot(\n",
+    "        np.transpose(parameters['Wi'][:, :n_a]), dit) + np.dot(\n",
+    "            np.transpose(parameters['Wc'][:, :n_a]), dcct) + np.dot(\n",
+    "                np.transpose(parameters['Wo'][:, :n_a]), dot)\n",
+    "    dc_prev = dc_next * ft + ot * (1 -\n",
+    "                                   np.square(np.tanh(c_next))) * ft * da_next\n",
+    "    dxt = np.dot(np.transpose(parameters['Wf'][:, n_a:]), dft) + np.dot(\n",
+    "        np.transpose(parameters['Wi'][:, n_a:]), dit) + np.dot(\n",
+    "            np.transpose(parameters['Wc'][:, n_a:]), dcct) + np.dot(\n",
+    "                np.transpose(parameters['Wo'][:, n_a:]), dot)\n",
     "    ### END CODE HERE ###\n",
     "\n",
     "    # Save gradients in dictionary\n",
@@ -2085,14 +2139,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "pggjdThtELGs",
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gradients[\"dxt\"][1][2] = 3.230559115109188\n",
+      "gradients[\"dxt\"].shape = (3, 10)\n",
+      "gradients[\"da_prev\"][2][3] = -0.0639621419710923\n",
+      "gradients[\"da_prev\"].shape = (5, 10)\n",
+      "gradients[\"dc_prev\"][2][3] = 0.7975220387970015\n",
+      "gradients[\"dc_prev\"].shape = (5, 10)\n",
+      "gradients[\"dWf\"][3][1] = -0.14795483816449725\n",
+      "gradients[\"dWf\"].shape = (5, 8)\n",
+      "gradients[\"dWi\"][1][2] = 1.0574980552259903\n",
+      "gradients[\"dWi\"].shape = (5, 8)\n",
+      "gradients[\"dWc\"][3][1] = 2.3045621636876668\n",
+      "gradients[\"dWc\"].shape = (5, 8)\n",
+      "gradients[\"dWo\"][1][2] = 0.3313115952892108\n",
+      "gradients[\"dWo\"].shape = (5, 8)\n",
+      "gradients[\"dbf\"][4] = [0.18864637]\n",
+      "gradients[\"dbf\"].shape = (5, 1)\n",
+      "gradients[\"dbi\"][4] = [-0.40142491]\n",
+      "gradients[\"dbi\"].shape = (5, 1)\n",
+      "gradients[\"dbc\"][4] = [0.25587763]\n",
+      "gradients[\"dbc\"].shape = (5, 1)\n",
+      "gradients[\"dbo\"][4] = [0.13893342]\n",
+      "gradients[\"dbo\"].shape = (5, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(1)\n",
     "xt_tmp = np.random.randn(3, 10)\n",
@@ -2351,7 +2434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2390,41 +2473,42 @@
     "\n",
     "    ### START CODE HERE ###\n",
     "    # Retrieve dimensions from da's and x1's shapes (≈2 lines)\n",
-    "    n_a, m, T_x = None\n",
-    "    n_x, m = None\n",
+    "    n_a, m, T_x = da.shape\n",
+    "    n_x, m = x1.shape\n",
     "\n",
     "    # initialize the gradients with the right sizes (≈12 lines)\n",
-    "    dx = None\n",
-    "    da0 = None\n",
-    "    da_prevt = None\n",
-    "    dc_prevt = None\n",
-    "    dWf = None\n",
-    "    dWi = None\n",
-    "    dWc = None\n",
-    "    dWo = None\n",
-    "    dbf = None\n",
-    "    dbi = None\n",
-    "    dbc = None\n",
-    "    dbo = None\n",
+    "    dx = np.zeros((n_x, m, T_x))\n",
+    "    da0 = np.zeros((n_a, m))\n",
+    "    da_prevt = np.zeros_like(da0)\n",
+    "    dc_prevt = np.zeros_like(da0)\n",
+    "    dWf = np.zeros((n_a, n_a + n_x))\n",
+    "    dWi = np.zeros_like(dWf)\n",
+    "    dWc = np.zeros_like(dWf)\n",
+    "    dWo = np.zeros_like(dWf)\n",
+    "    dbf = np.zeros((n_a, 1))\n",
+    "    dbi = np.zeros_like(dbf)\n",
+    "    dbc = np.zeros_like(dbf)\n",
+    "    dbo = np.zeros_like(dbf)\n",
     "\n",
     "    # loop back over the whole sequence\n",
-    "    for t in reversed(range(None)):\n",
+    "    for t in reversed(range(T_x)):\n",
     "        # Compute all gradients using lstm_cell_backward. Choose wisely the \"da_next\" (same as done for Ex 6).\n",
-    "        gradients = None\n",
+    "        gradients = lstm_cell_backward(da[:, :, t] + da_prevt, dc_prevt,\n",
+    "                                       caches[t])\n",
     "        # Store or add the gradient to the parameters' previous step's gradient\n",
-    "        da_prevt = None\n",
-    "        dc_prevt = None\n",
-    "        dx[:, :, t] = None\n",
-    "        dWf += None\n",
-    "        dWi += None\n",
-    "        dWc += None\n",
-    "        dWo += None\n",
-    "        dbf += None\n",
-    "        dbi += None\n",
-    "        dbc += None\n",
-    "        dbo += None\n",
+    "        da_prevt = gradients['da_prev']\n",
+    "        dc_prevt = gradients['dc_prev']\n",
+    "        dx[:, :, t] = gradients['dxt']\n",
+    "        dWf += gradients['dWf']\n",
+    "        dWi += gradients['dWi']\n",
+    "        dWc += gradients['dWc']\n",
+    "        dWo += gradients['dWo']\n",
+    "        dbf += gradients['dbf']\n",
+    "        dbi += gradients['dbi']\n",
+    "        dbc += gradients['dbc']\n",
+    "        dbo += gradients['dbo']\n",
     "    # Set the first activation's gradient to the backpropagated gradient da_prev.\n",
-    "    da0 = None\n",
+    "    da0 = da_prevt\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "\n",
@@ -2447,13 +2531,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "sBipd8MoELGy"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gradients[\"dx\"][1][2] = [ 0.00218254  0.28205375 -0.48292508 -0.43281115]\n",
+      "gradients[\"dx\"].shape = (3, 10, 4)\n",
+      "gradients[\"da0\"][2][3] = 0.3127703102572602\n",
+      "gradients[\"da0\"].shape = (5, 10)\n",
+      "gradients[\"dWf\"][3][1] = -0.08098023109383468\n",
+      "gradients[\"dWf\"].shape = (5, 8)\n",
+      "gradients[\"dWi\"][1][2] = 0.4051243309298184\n",
+      "gradients[\"dWi\"].shape = (5, 8)\n",
+      "gradients[\"dWc\"][3][1] = -0.07937467355121496\n",
+      "gradients[\"dWc\"].shape = (5, 8)\n",
+      "gradients[\"dWo\"][1][2] = 0.03894877576298694\n",
+      "gradients[\"dWo\"].shape = (5, 8)\n",
+      "gradients[\"dbf\"][4] = [-0.15745657]\n",
+      "gradients[\"dbf\"].shape = (5, 1)\n",
+      "gradients[\"dbi\"][4] = [-0.50848333]\n",
+      "gradients[\"dbi\"].shape = (5, 1)\n",
+      "gradients[\"dbc\"][4] = [-0.42510818]\n",
+      "gradients[\"dbc\"].shape = (5, 1)\n",
+      "gradients[\"dbo\"][4] = [-0.17958196]\n",
+      "gradients[\"dbo\"].shape = (5, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(1)\n",
     "x_tmp = np.random.randn(3, 10, 7)\n",
